--- a/css/ecc.css
+++ b/css/ecc.css
@@ -119,7 +119,8 @@ select.select_bar {
 
 /* Button styling */
 button.copy{
-    margin-left: 80%;
+    margin-left: 90%;
+    /* margin-top: 0%; */
 }
 button.generate_key, button.result_but, button.copy {
     background-color: #30ae69;
